--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,3 +18,4 @@
 @import "components/about-course";
 @import "components/filter-search";
 @import "components/instructor";
+@import "components/contact";
