Page course details created

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,3 +19,4 @@
 @import "components/filter-search";
 @import "components/instructor";
 @import "components/contact";
+@import "components/course-details";
