--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2704,4 +2704,147 @@ ul {
 #contact-content .write-us form button:focus {
   outline: none;
 }
+
+#course-details {
+  padding: 80px 0;
+  background-color: #f7f7f7;
+}
+
+#course-details .course-details-content img {
+  max-width: 100%;
+  height: auto;
+}
+
+#course-details .course-details-content .tabs {
+  background-color: white;
+  padding: 30px 35px;
+}
+
+#course-details .course-details-content .tabs .tabs-buttons {
+  background-color: #f7f7f7;
+  margin-bottom: 25px;
+}
+
+#course-details .course-details-content .tabs .tabs-buttons ul {
+  justify-content: space-between;
+  border: none;
+}
+
+#course-details .course-details-content .tabs .tabs-buttons ul li a {
+  border: none;
+  background-color: transparent;
+  color: #000000;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 25px 30px;
+  border-radius: 0;
+}
+
+#course-details .course-details-content .tabs .tabs-buttons ul li a.active {
+  background-color: #ff5520;
+  color: white;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview h4 {
+  color: #000;
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 10px;
+  font-family: "Fira Sans", sans-serif;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-text {
+  margin-bottom: 35px;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-text p {
+  color: #555555;
+  font-size: 16px;
+  line-height: 1.625;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content .icon-title img {
+  margin-right: 10px;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content .icon-title h5 {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: "Fira Sans", sans-serif;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content .icon-title h5 a {
+  color: #000000;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content p {
+  color: #555555;
+  font-size: 15px;
+  line-height: 1.6;
+  max-width: 330px;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content .certificate p {
+  margin-bottom: 0;
+}
+
+#course-details .course-details-content .tabs .tab-content #overview .overview-content .certificate a.link {
+  color: #000;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item {
+  margin-bottom: 10px;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header {
+  background-color: #f7f7f7;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button {
+  border: none;
+  position: relative;
+  background-color: transparent;
+  width: 100%;
+  padding: 13px 12px 12px 50px;
+  background-color: #f2f2f4;
+  outline: none;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button .lesson-time {
+  float: right;
+  display: flex;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button .lesson-time span {
+  font-weight: 500;
+  margin-right: 25px;
+  font-size: 15px;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button h3 {
+  color: #000;
+  float: left;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Fira Sans", sans-serif;
+  margin-bottom: 0;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button::after {
+  top: -10px;
+  left: 15px;
+  color: #000;
+  font-size: 50px;
+  content: "-";
+  position: absolute;
+}
+
+#course-details .course-details-content .tabs .tab-content #curriculum .accordion-item .accordion-header button.collapsed::after {
+  top: 0;
+  content: "+";
+  font-size: 40px;
+}
 /*# sourceMappingURL=style.css.map */
