--- a/assets/scss/components/_course-details.scss
+++ b/assets/scss/components/_course-details.scss
@@ -85,6 +85,17 @@
           }
         }
         #curriculum {
+          .curriculum-header {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 10px;
+            h3 {
+              color: #000;
+              font-size: 24px;
+              font-weight: 700;
+              padding-bottom: 10px;
+            }
+          }
           .accordion-item {
             margin-bottom: 10px;
 
@@ -95,7 +106,7 @@
                 position: relative;
                 background-color: transparent;
                 width: 100%;
-                padding: 13px 12px 12px 50px;
+                padding: 16px 12px 16px 50px;
                 background-color: #f2f2f4;
                 outline: none;
                 .lesson-time {
@@ -128,6 +139,536 @@
                 top: 0;
                 content: "+";
                 font-size: 40px;
+              }
+            }
+            .accordion-body {
+              padding: 20px 30px;
+              border: 1px solid #f2f2f4;
+              padding-bottom: 0;
+              ul {
+                li {
+                  display: flex;
+                  justify-content: space-between;
+                  border-bottom: 1px solid #dadada;
+                  margin-bottom: 15px;
+                  padding-bottom: 15px;
+                  .icon-accordion-text {
+                    color: #555555;
+                    i {
+                      font-size: 13px;
+                      margin-right: 10px;
+                    }
+                    a {
+                      color: #555555;
+                    }
+                  }
+                  .time-text {
+                    display: flex;
+                    span {
+                      color: $color-orange;
+                      margin-right: 12px;
+                    }
+                    p {
+                      margin-bottom: 0;
+                    }
+                  }
+                }
+                li:last-child {
+                  margin: 0;
+                  padding: 0;
+                  border: none;
+                }
+              }
+            }
+          }
+        }
+        #instructor-details {
+          .instructor-details-content {
+            h3 {
+              font-family: $secondary-font;
+              color: #000;
+              font-size: 24px;
+              font-weight: 700;
+              padding-bottom: 10px;
+            }
+            .btn-instructor {
+              float: right;
+              height: 48px;
+              width: 150px;
+              line-height: 44px;
+              border-radius: 30px;
+              border: 2px solid #0000fe;
+              color: #000;
+              font-weight: 700;
+              text-align: center;
+            }
+            .teacher-img-text {
+              display: flex;
+              margin-top: 20px;
+              .teacher-img {
+                width: 120px;
+                height: 120px;
+                overflow: hidden;
+                margin-right: 25px;
+                border-radius: 100%;
+              }
+              .teacher-text {
+                padding-top: 15px;
+                h3 {
+                  color: #000;
+                  font-weight: 600;
+                  font-size: 20px;
+                  padding-bottom: 10px;
+                }
+                .stars-rate-review {
+                  display: flex;
+                  margin-bottom: 10px;
+                  ul {
+                    display: flex;
+                    margin-bottom: 0;
+                    li {
+                      color: #ebc90a;
+                      margin-right: 3px;
+                    }
+                    li.unchecked {
+                      color: #d3d3d3;
+                    }
+                  }
+                  .rate {
+                    margin-left: 10px;
+                    margin-right: 5px;
+                    color: #000;
+                    font-weight: 500;
+                  }
+                  .review {
+                    color: #555555;
+                    font-size: 16px;
+                  }
+                }
+                .students {
+                  span {
+                    margin-right: 10px;
+                    color: #555555;
+                    font-size: 16px;
+                    i {
+                      margin-right: 5px;
+                      color: #e3002a;
+                    }
+                  }
+                }
+              }
+            }
+            .instructor-details {
+              margin-top: 25px;
+              p {
+                margin-bottom: 30px;
+                color: #555555;
+                font-size: 16px;
+              }
+            }
+          }
+        }
+        #reviews {
+          .review-content {
+            padding-bottom: 20px;
+            .review-comment {
+              .review-img {
+                float: left;
+                width: 80px;
+                height: 80px;
+                overflow: hidden;
+                border-radius: 8px;
+                margin-right: 20px;
+              }
+              .review-text {
+                overflow: hidden;
+                .name-star {
+                  display: flex;
+                  justify-content: space-between;
+                  .stars {
+                    ul {
+                      display: flex;
+                      li {
+                        color: #ebc90a;
+                        margin-right: 5px;
+                      }
+                      li.unchecked {
+                        color: #d3d3d3;
+                      }
+                    }
+                  }
+                  .review-author {
+                    margin-bottom: 15px;
+                    h3 {
+                      color: #000;
+                      font-size: 20px;
+                      font-weight: 500;
+                      padding-bottom: 5px;
+                      font-family: $secondary-font;
+                      margin-bottom: 0;
+                    }
+                    span {
+                      font-size: 14px;
+                      color: #555555;
+                    }
+                  }
+                }
+
+                p {
+                  color: #555555;
+                  font-size: 16px;
+                }
+                .btn-reply {
+                  color: #fff;
+                  height: 40px;
+                  width: 100px;
+                  font-size: 15px;
+                  font-weight: 700;
+                  border-radius: 30px;
+                  line-height: 40px;
+                  display: inline-block;
+                  background-color: #ff5520;
+                  text-align: center;
+                }
+              }
+            }
+          }
+          .add-review {
+            padding-top: 30px;
+            position: relative;
+            &::before {
+              top: 0;
+              left: -45px;
+              height: 40px;
+              width: 111%;
+              content: "";
+              position: absolute;
+              background-color: $bg-gray;
+            }
+            h3 {
+              padding-top: 50px;
+              color: #000;
+              font-size: 24px;
+              font-weight: 700;
+              padding-bottom: 10px;
+              font-family: $secondary-font;
+            }
+            form {
+              input {
+                width: 266px;
+                height: 45px;
+                border: none;
+                padding-left: 15px;
+                border-radius: 4px;
+                margin-bottom: 20px;
+                background-color: #efeff0;
+              }
+              textarea {
+                width: 100%;
+                border: none;
+                height: 165px;
+                padding: 15px;
+                border-radius: 4px;
+                margin-bottom: 20px;
+                background-color: #efeff0;
+              }
+              button {
+                color: #fff;
+                width: 170px;
+                height: 50px;
+                border: none;
+                font-weight: 700;
+                border-radius: 40px;
+                background-color: #0000fe;
+                outline: none;
+              }
+            }
+          }
+        }
+        #view-offline {
+          .view-offline-content {
+            h3 {
+              font-family: $secondary-font;
+              color: #000;
+              font-size: 24px;
+              font-weight: 700;
+              padding-bottom: 10px;
+            }
+            p {
+              color: #555555;
+              font-size: 16px;
+              margin-bottom: 0;
+            }
+            .btn-download {
+              color: #fff;
+              font-weight: 700;
+              margin-top: 30px;
+              padding: 15px 30px;
+              border-radius: 40px;
+              display: inline-block;
+              background-color: #ff5520;
+            }
+          }
+        }
+      }
+    }
+  }
+  .course-details-right-side {
+    .details-video {
+      position: relative;
+      margin-bottom: 30px;
+      img {
+        width: 100%;
+      }
+      a {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateY(-50%);
+      }
+    }
+    .right-side-content {
+      overflow: hidden;
+      border-radius: 4px;
+      margin-bottom: 40px;
+      background-color: white;
+      padding: 35px 30px;
+      .pricing {
+        ul {
+          li {
+            margin-bottom: 10px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #eef1fe;
+            display: flex;
+            justify-content: space-between;
+            span {
+              i {
+                color: #ff5520;
+                margin-right: 7px;
+              }
+            }
+          }
+        }
+        .price {
+          span {
+            float: left;
+            color: #000;
+            font-size: 24px;
+            font-weight: 700;
+            strong {
+              color: $color-orange;
+            }
+          }
+          .btn-buy {
+            color: #fff;
+            width: 75px;
+            height: 30px;
+            float: right;
+            font-size: 15px;
+            margin-top: 5px;
+            font-weight: 700;
+            line-height: 30px;
+            margin-left: 20px;
+            text-align: center;
+            background-color: #ff5520;
+          }
+        }
+      }
+      .recommendation {
+        h3 {
+          color: #000;
+          font-size: 20px;
+        }
+        ul {
+          li:not(:last-child) {
+            border-bottom: 1px solid #eef1fe;
+            margin-bottom: 15px;
+            padding-bottom: 15px;
+          }
+          li {
+            display: flex;
+
+            div {
+              display: block;
+              a {
+                color: #000;
+                font-weight: 700;
+                line-height: 1.375;
+                padding-bottom: 3px;
+              }
+              span {
+                display: block;
+                color: #ff5520;
+                font-size: 14px;
+                font-weight: 700;
+              }
+            }
+            .recom-img {
+              margin-right: 15px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width: 870px) {
+  #course-details {
+    .course-details-content {
+      .tabs {
+        .tab-content {
+          #reviews {
+            .review-content {
+              .add-review {
+                &::before {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//course-details-content-media
+@media only screen and(max-width: 768px) {
+  #course-details {
+    .course-details-content {
+      .tabs {
+        .tabs-buttons {
+          ul {
+            justify-content: flex-start;
+          }
+        }
+        .tab-content {
+          #curriculum {
+            .accordion-item {
+              .accordion-header {
+                button {
+                  text-align: left;
+                  .lesson-time {
+                    float: none;
+                  }
+                  h3 {
+                    float: none;
+                    margin-bottom: 10px;
+                    font-size: 18px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width: 630px) {
+  #course-details {
+    .course-details-content {
+      .tabs {
+        .tab-content {
+          #instructor-details {
+            .instructor-details-content {
+              .btn-instructor {
+                display: none;
+              }
+              .teacher-img-text {
+                .teacher-img {
+                  width: 90px;
+                  height: 90px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width: 448px) {
+  #course-details {
+    .course-details-content {
+      .tabs {
+        .tab-content {
+          #instructor-details {
+            .instructor-details-content {
+              .teacher-img-text {
+                display: block;
+                .teacher-text {
+                  .stars-rate-review {
+                    display: block;
+                    ul {
+                      margin-bottom: 10px;
+                    }
+                    .rate {
+                      margin-left: 0;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width: 530px) {
+  #course-details {
+    .course-details-content {
+      .tabs {
+        .tabs-buttons {
+          ul {
+            li {
+              a {
+                padding: 10px 15px;
+                font-size: 14px;
+              }
+            }
+          }
+        }
+        .tab-content {
+          #curriculum {
+            .curriculum-header {
+              display: block;
+              margin-bottom: 20px;
+              h3 {
+                margin-bottom: 2px;
+                padding: 0;
+              }
+            }
+            .accordion-item {
+              .accordion-header {
+                button {
+                  padding: 10px 12px 13px 50px;
+                }
+              }
+              .accordion-body {
+                ul {
+                  li {
+                    display: block;
+                    .icon-accordion-text {
+                      margin-bottom: 10px;
+                    }
+                  }
+                }
+              }
+            }
+          }
+          #reviews {
+            .review-content {
+              .review-comment {
+                .review-text {
+                  .name-star {
+                    display: block;
+                  }
+                  .btn-reply {
+                    margin-top: 15px;
+                  }
+                }
               }
             }
           }
