--- a/assets/scss/components/_latset-news.scss
+++ b/assets/scss/components/_latset-news.scss
@@ -10,7 +10,8 @@
     }
   }
   .latset-news-slider,
-  .blog {
+  .blog,
+  .blog-details {
     .news-item {
       margin: 0 auto;
       max-width: 370px;
@@ -161,5 +162,320 @@
         }
       }
     }
+  }
+}
+.blog-details {
+  .news-item {
+    max-width: none !important;
+    .news-img-date {
+      .news-img {
+        img {
+          width: 100%;
+        }
+      }
+      &::before {
+        content: none !important;
+      }
+    }
+    .news-text {
+      padding: 40px !important;
+      margin-bottom: 30px;
+      box-shadow: none !important;
+      .comments {
+        margin-bottom: 30px;
+      }
+      article {
+        margin-bottom: 30px;
+        color: #555555;
+      }
+      blockquote {
+        font-size: 21px;
+        margin-bottom: 35px;
+        padding: 20px 0px 20px 60px;
+        font-style: italic;
+        border-left: 4px solid #ff5520;
+        color: #555555;
+      }
+      // .tags-social-links {
+      // display: flex;
+      // justify-content: space-between;
+      .tags {
+        a {
+          margin-right: 7px;
+          padding: 10px 12px;
+          border-radius: 30px;
+          display: inline-block;
+          border: 1px solid #e5e5e5;
+          text-align: center;
+          color: #555555;
+        }
+      }
+      .social-links {
+        align-items: center;
+        span {
+          color: #000;
+          font-weight: 700;
+          margin-right: 10px;
+        }
+        a {
+          width: 42px;
+          color: #fff;
+          height: 42px;
+          line-height: 42px;
+          margin-left: 8px;
+          text-align: center;
+          border-radius: 100%;
+          display: inline-block;
+          transition: 0.3s all ease-in-out;
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+        a:nth-child(2) {
+          background-color: #3b5998;
+        }
+        a:nth-child(3) {
+          background-color: #1da1f2;
+        }
+        a:nth-child(4) {
+          background-color: #0077b5;
+        }
+      }
+      // }
+    }
+    .post-changer {
+      padding: 40px;
+      height: 100%;
+      position: relative;
+      padding-top: 55px;
+      &::before {
+        top: 0;
+        left: -45px;
+        height: 40px;
+        width: 111%;
+        content: "";
+        position: absolute;
+        background-color: #f7f7f7;
+      }
+      .post-name-left,
+      .post-name-right {
+        padding-top: 30px;
+        a {
+          display: block;
+          margin-bottom: 15px;
+          padding-bottom: 15px;
+          border-bottom: 2px solid #ff5520;
+          color: #000;
+          font-weight: 700;
+          font-size: 15px;
+          i {
+            color: blue;
+          }
+        }
+        span {
+          color: #000;
+          font-size: 18px;
+          font-weight: 700;
+        }
+      }
+      .post-name-left {
+        text-align: left;
+        a {
+          i {
+            margin-right: 10px;
+          }
+        }
+      }
+      .post-name-right {
+        text-align: right;
+        a {
+          i {
+            margin-left: 10px;
+          }
+        }
+      }
+    }
+    .post-changer.bor {
+      border-right: 2px solid #e5e5e5;
+    }
+    .review-content {
+      padding: 40px;
+      position: relative;
+      padding-top: 60px;
+      &::before {
+        top: 0;
+        left: -45px;
+        height: 40px;
+        width: 111%;
+        content: "";
+        position: absolute;
+        background-color: #f7f7f7;
+      }
+      h3 {
+        color: #000;
+        font-size: 24px;
+        font-weight: 700;
+        font-family: $secondary-font;
+        margin-bottom: 15px;
+      }
+      .reply.review-comment {
+        margin-left: 100px;
+      }
+    }
+    .add-review {
+      form {
+        input {
+          width: 262px;
+        }
+      }
+    }
+
+    &:hover {
+      box-shadow: none !important;
+      .news-img-date {
+        img {
+          transform: none !important;
+        }
+      }
+    }
+  }
+}
+.right-side {
+  .search-box {
+    margin-bottom: 40px;
+    form {
+      display: flex;
+      input {
+        width: 80%;
+        height: 48px;
+        border: none;
+        padding-left: 15px;
+        border-radius: 4px;
+        background-color: #fff;
+        margin: 0;
+      }
+      button {
+        top: 0;
+        right: 0;
+        width: 20%;
+        color: #fff;
+        border: none;
+        height: 48px;
+        border-radius: 4px;
+        background-color: #ff5520;
+      }
+    }
+  }
+  .right-side-content {
+    overflow: hidden;
+    border-radius: 4px;
+    margin-bottom: 40px;
+    background-color: #fff;
+    padding: 35px 30px;
+    h4 {
+      color: #000000;
+      font-size: 20px;
+      font-weight: 700;
+      padding-bottom: 5px;
+      margin-left: 15px;
+    }
+    ul {
+      li {
+        margin-bottom: 5px;
+        a {
+          color: #000;
+          font-weight: 700;
+          padding-left: 15px;
+          position: relative;
+          transition: 0.4s all ease-in-out;
+          &:hover {
+            margin-left: 15px;
+          }
+          &::before {
+            color: $color-orange;
+            font-size: 14px;
+            content: "";
+            font-weight: 900;
+            font-family: "Font Awesome 5 Free";
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+    .recent-post {
+      display: flex;
+      border: 1px solid #eef1fe;
+      margin-bottom: 25px;
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      .date-link {
+        margin-left: 15px;
+        span {
+          color: #888888;
+          font-size: 14px;
+          display: block;
+        }
+        a {
+          color: #000;
+          font-size: 15px;
+          margin-bottom: 0;
+          font-weight: 700;
+        }
+      }
+    }
+    .popular-tags {
+      a {
+        margin-right: 5px;
+        margin-bottom: 5px;
+        padding: 10px 12px;
+        border-radius: 30px;
+        display: inline-block;
+        border: 1px solid #e5e5e5;
+        color: #555555;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media only screen and(max-width:700px) {
+  #latset-news {
+    .blog-details {
+      .news-item {
+        .review-content {
+          .reply.review-comment {
+            margin-left: 0;
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width:448px) {
+  #latset-news {
+    .blog-details {
+      .news-item {
+        .review-content {
+          .review-comment {
+            .review-text {
+              .name-star {
+                display: block;
+                margin-bottom: 10px;
+              }
+            }
+            .review-img {
+              float: none;
+              margin-bottom: 15px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and(max-width:448px) {
+  #latset-news {
   }
 }
