--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,3 +20,4 @@
 @import "components/instructor";
 @import "components/contact";
 @import "components/course-details";
+@import "components/instructor-details";
