--- a/assets/scss/_website.scss
+++ b/assets/scss/_website.scss
@@ -207,6 +207,18 @@ $breadcrumb-divider: (">>");
   }
 }
 
+#loader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+  width: 100%;
+  background: #fff url("/assets/img/pre.svg") no-repeat center center;
+  height: 100%;
+  overflow: visible;
+  background-color: #fff;
+}
+
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
